# OBCanonicalRadicals

./: README.md  pyproject.toml  run.py
OBCR/: __init__.py  obcr.py
obcr/: __init__.py  obcr.py  utils.py
scripts/: run.py
