[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obcr"
version = "1.0.0"
description = "Canonicalise radical structure within OpenBabel"
readme = "README.md"
authors = [{ name = "Joe Gilkes", email = "j.gilkes@warwick.ac.uk" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["openbabel", "pybel", "radical", "molecule", "chemistry"]
dependencies = [
    "numpy",
    "openbabel >= 3.1",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/joegilkes/OBCanonicalRadicals"
